--- a/src/scene-panel/scene-panel-card.html
+++ b/src/scene-panel/scene-panel-card.html
@@ -4,5 +4,8 @@
             <canvas class="obj-preview"></canvas>
             <span class="card-title">{{name}}</span>
         </div>
+        <div class="card-content">
+            <i class="fa fa-eye toggle-vis"></i>
+        </div>
     </div>
 </div>
