Abstracted code execution to it's own component, laying ground work for save/loading, fixed variables, removed dependencies that are now using CDN's, added aframe-extras

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="left-view">
         <div id="left-view-top">
             <a-scene embedded>
-                <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" scene-panel="name:Box;"></a-box>
-                <a-sphere position="0 1.25 -5" radius="1.25" material="src:url(./assets/img/moon.jpg)" scene-panel="name:Moon;"></a-sphere>
-                <a-cylinder position="-0.8 1.25 -3" radius="0.2" height="0.5" material="src:url(./assets/img/soup.jpg)" scene-panel="name:Can;" rotation="0 225 0"></a-cylinder>
-                <a-plane position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" scene-panel="name:Ground;type:env;"></a-plane>
-                <a-sky color="#ECECEC" radius="100" scene-panel="name:Sky;type:env;" src="./assets/img/galaxy.jpg"></a-sky>
+                <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" scene-panel="name:Box;" blockly></a-box>
+                <a-sphere position="0 1.25 -5" radius="1.25" material="src:url(./assets/img/moon.jpg)" scene-panel="name:Moon;" blockly></a-sphere>
+                <a-cylinder position="-0.8 1.25 -3" radius="0.2" height="0.5" material="src:url(./assets/img/soup.jpg)" scene-panel="name:Can;" rotation="0 225 0" blockly></a-cylinder>
+                <a-plane position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" scene-panel="name:Ground;type:env;" blockly></a-plane>
+                <a-sky color="#ECECEC" radius="100" scene-panel="name:Sky;type:env;" src="./assets/img/galaxy.jpg" blockly></a-sky>
             </a-scene>
         </div>
         <div id="left-view-bottom">
