--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div id="left-view">
         <div id="left-view-top">
-            <a-scene embedded>
-                <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" scene-panel="name:Box;" blockly></a-box>
-                <a-sphere position="0 1.25 -5" radius="1.25" material="src:url(./assets/img/moon.jpg)" scene-panel="name:Moon;" blockly></a-sphere>
-                <a-cylinder position="-0.8 1.25 -3" radius="0.2" height="0.5" material="src:url(./assets/img/soup.jpg)" scene-panel="name:Can;" rotation="0 225 0" blockly></a-cylinder>
-                <a-plane position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" scene-panel="name:Ground;type:env;" blockly></a-plane>
+            <a-scene embedded physics>
+                <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" scene-panel="name:Box;" blockly static-body></a-box>
+                <a-sphere position="0 1.25 -5" radius="1.25" material="src:url(./assets/img/moon.jpg)" scene-panel="name:Moon;" blockly static-body></a-sphere>
+                <a-cylinder position="-0.8 1.25 -3" radius="0.2" height="0.5" material="src:url(./assets/img/soup.jpg)" scene-panel="name:Can;" rotation="0 225 0" blockly static-body></a-cylinder>
+                <a-plane position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" scene-panel="name:Ground;type:env;" blockly static-body></a-plane>
                 <a-sky color="#ECECEC" radius="100" scene-panel="name:Sky;type:env;" src="./assets/img/galaxy.jpg" blockly></a-sky>
             </a-scene>
         </div>
