--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="loader"><div class="loader-center"><div class="preloader-wrapper big active"><div class="spinner-layer spinner-blue-only"><div class="circle-clipper left"><div class="circle"></div></div><div class="gap-patch"><div class="circle"></div></div><div class="circle-clipper right"><div class="circle"></div></div></div></div></div></div>
     <div id="left-view">
         <div id="left-view-top">
-            <a-scene embedded physics="debug:true;">
+            <a-scene embedded physics="debug:false;">
                 <a-entity class="custom-obj" geometry="primitive: box;" position="-1 0.5 -3" rotation="0 45 0" material="color:#4CC3D9;" scene-panel="name:Box;" blockly static-body obj-config custom-events></a-entity>
                 <a-entity class="custom-obj" geometry="primitive: sphere;radius: 1.25;" position="0 1.25 -5" material="src:url(./assets/img/moon.jpg)" scene-panel="name:Moon;" blockly static-body obj-config custom-events></a-entity>
                 <a-entity class="custom-obj" position="-0.8 1.25 -3" geometry="primitive: cylinder;radius: 0.2;height: 0.5;" material="src:url(./assets/img/soup.jpg)" scene-panel="name:Can;" rotation="0 225 0" blockly static-body obj-config custom-events></a-entity>
