added saving/loading and other fixes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <ul class="scene-tabs tabs">
                 <li class="tab"><a href="#scene-tab-env">World</a></li>
                 <li class="tab"><a class="active" href="#scene-tab-obj">Things</a></li>
+
+                <li class="tab save-load save"><i class="fa fa-save"></i></li>
+                <li class="tab save-load load"><i class="fa fa-folder-open-o"></i></li>
             </ul>
             <div class="divider"></div>
             <div class="row">
@@ -69,5 +72,6 @@
             </div>
         </div>
     </div>
+    <input id="file-input" type="file" name="name" style="display: none;" />
 </body>
 </html>
