fixed varible setting not working, added start and stop events/buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>A-Blocks</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <link id="materializeCSS" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" integrity="sha256-e22BQKCF7bb/h/4MFJ1a4lTRR2OuAe8Hxa/3tgU5Taw=" crossorigin="anonymous" />
+    <link rel="icon" type="image/png" href="./icon.png">
     <style>.loader{background-color:white;width:100vw;height:100vh;position: fixed;z-index:99999;top:0;left:0;transition:height 0.35s ease-out;overflow-y:hidden;}.loader .loader-center {position:absolute;left:50%;top:50%;transform:translateX(-50%) translateY(-50%);}</style>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -36,8 +37,10 @@
                 <li class="tab"><a href="#scene-tab-env">World</a></li>
                 <li class="tab"><a class="active" href="#scene-tab-obj">Things</a></li>
 
-                <li class="tab save-load save"><i class="fa fa-save"></i></li>
-                <li class="tab save-load load"><i class="fa fa-folder-open-o"></i></li>
+                <li class="tab save-load save" data-position="bottom" data-tooltip="Save Scene"><i class="fa fa-save"></i></li>
+                <li class="tab save-load load" data-position="bottom" data-tooltip="Load Scene"><i class="fa fa-folder-open-o"></i></li>
+                <li class="tab start-stop stop" data-position="bottom" data-tooltip="Stop Scene"><i class="fa fa-stop"></i></li>
+                <li class="tab start-stop start" data-position="bottom" data-tooltip="Start Scene"><i class="fa fa-flag"></i></li>
             </ul>
             <div class="divider"></div>
             <div class="row">
